--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "babel-loader": "^6.2.10",
     "babel-preset-env": "^1.1.4",
     "babel-preset-react": "^6.16.0",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.24.1",
+    "mocha": "^3.2.0",
+    "mockgoose": "^6.0.8",
+    "nodemon": "^1.11.0",
     "react-hot-loader": "^1.3.1",
     "react-scripts": "0.8.4",
     "style-loader": "^0.13.1",
@@ -18,14 +23,19 @@
     "webpack-hot-middleware": "^2.13.2"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "config": "^1.24.0",
+    "express-resource": "^1.0.0",
     "moment": "^2.17.1",
+    "mongoose": "^4.7.3",
+    "morgan": "^1.7.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
   "scripts": {
-    "start": "node server.js",
-    "build": "webpack",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "nodemon server.js",
+    "build": "npm run clean && webpack",
+    "test": "npm run build && mocha --timeout 10000",
+    "clean": "rm -f ./public/dist/*"
   }
 }
