--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "autoprefixer": "^6.5.4",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
@@ -17,6 +18,7 @@
     "mocha": "^3.2.0",
     "mockgoose": "^6.0.8",
     "nodemon": "^1.11.0",
+    "postcss-loader": "^1.2.1",
     "react-hot-loader": "^1.3.1",
     "react-scripts": "0.8.4",
     "style-loader": "^0.13.1",
@@ -36,7 +38,7 @@
     "react-dom": "^15.4.1"
   },
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "build": "npm run clean && webpack",
     "test": "npm run build && mocha --timeout 10000",
     "clean": "rm -f ./public/dist/*",
