--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "body-parser": "^1.15.2",
     "config": "^1.24.0",
     "express-resource": "^1.0.0",
+    "express-session": "^1.14.2",
     "moment": "^2.17.1",
     "mongoose": "^4.7.3",
     "morgan": "^1.7.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
+    "whatwg-fetch": "^2.0.1"
   },
   "scripts": {
     "start": "node server.js",
