--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-hot-middleware": "^2.13.2"
   },
   "dependencies": {
+    "bcrypt": "^1.0.1",
     "body-parser": "^1.15.2",
     "config": "^1.24.0",
     "express-resource": "^1.0.0",
@@ -38,6 +39,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
+    "underscore": "^1.8.3",
     "whatwg-fetch": "^2.0.1"
   },
   "scripts": {
